--- a/docs/getting-started.adoc
+++ b/docs/getting-started.adoc
@@ -7,7 +7,7 @@ Coaster Auth를 빌드부터 배포까지 설명합니다.
 .이미지 빌드
 [source,shell]
 ----
-./mvnw spring-boot:build-image -Dspring-boot.build-image.imageName=coaster-auth:1.0.0-SNAPSHOT -P integration
+./mvnw spring-boot:build-image -Dspring-boot.build-image.imageName=coaster-auth:1.0.0 -P integration
 ----
 
 생성된 이미지를 배포할 쿠버네티스 클러스터의 모든 노드에 로드하세요. 또는 이미지 레지스트리를 이용할 수 있습니다.
